# WebSearch

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
configs/: blacklist.yaml  llm.yaml.example  providers.yaml.example  rewriter.yaml  whitelist.yaml
docs/: Python联网搜索实现方案调研报告.md  deployment.md  getting_started.md  searxng使用指南.md  usage.md  v2使用指南.md  v3核心碰撞算法技术文档.md  可信联网搜索方案调研报告.md  可信联网搜索系统价值说明.md  可信联网搜索系统架构设计.md  可信联网搜索系统架构设计v2.md  可信联网搜索系统架构设计v3.md  可信联网搜索系统生命周期与调用链.md  工具swagger描述文档.json  核心碰撞算法技术文档.md  核心筛选算法技术文档.md  碰撞算法改进文档_v2.md  联网搜索提示词.md  重排算法技术文档.md
docs/bugfix/: FullChainDebug-Issues-Fix.md  LLM-Prompt-Stream-Bugfix.md  README.md  Reranker修复问题总结.md  SearXNG_Provider_问题修复.md  SearXNG配置问题分析与解决.md
examples/: example.py  example_trusted_search.py  example_trusted_search_v2.py  example_trusted_search_v3.py  example_trusted_search_v3_async.py
examples/client/: web_search_client.py
examples/server/: openapi.json  server_example.py
src/web_search/: __init__.py
src/web_search/classifier/: rules.py  (+6 more)
tests/: conftest.py
tests/test_classifier/: test_blacklist.py  test_relevance_scorer.py  test_source_classifier.py  test_whitelist.py
tests/test_integration/: test_classification_reranking.py  test_collision_flow.py  test_orchestrator_v2.py  test_query_rewrite_search.py
tests/test_orchestrator/: test_orchestrator.py
tests/test_providers/: test_base.py  test_factory.py  test_searxng.py
tests/test_reranker/: test_freshness.py
tests/test_resolver/: test_deduplicator.py  test_embedding_engine.py  test_fact_resolver.py  test_priority_engine.py
(+78 files in other folders)
